Fix Hero on mobile

--- a/src/components/PageTitle/index.module.css
+++ b/src/components/PageTitle/index.module.css
@@ -1,16 +1,23 @@
-.PageTitle {
+.root {
   font-family: "Acta Display";
-  font-size: 112px;
+  font-size: 56px;
   font-weight: 400;
-  line-height: 112px;
+  line-height: 56px;
   color: #045cfc;
+}
+
+@media (min-width: 321px) {
+  .root {
+    font-size: 112px;
+    line-height: 112px;
+  }
 }
 
 /**
  * Fix for Firefox font rendering issues.
  */
 @-moz-document url-prefix() {
-  .PageTitle {
+  .root {
     font-weight: lighter;
   }
 }
