--- a/src/components/layout/header.module.css
+++ b/src/components/layout/header.module.css
@@ -1,5 +1,5 @@
 .root {
-  padding: 28px 20px 84px;
+  padding: 28px 20px 56px;
 }
 
 .content {
